FIX input label covering on highlight

--- a/src/app/input-text/input-text.component.scss
+++ b/src/app/input-text/input-text.component.scss
@@ -32,6 +32,7 @@ label {
   background: transparent;
   z-index: 1;
   font-style: italic;
+  background-color: #1e1e1e;
 }
 
 label::after {
